Update to JDK 17, fix NPE on printing, remove carriage returns from files.